@@ -27,6 +27,8 @@ evans
   b - Fix so pbs_mom will compile when configured with --with-nvml-lib=/usr/lib and
       --with-nvml-include. TRQ-926.
   b - fix pbs_track to add its process to the cpuset as well. TRQ-925.
+  b - Fix so gpu count gets written out to server nodes file when using
+      --enable-nvidia-gpus. TRQ-927.
 
 4.0.1
   b - Fix trqauthd init scripts to use correct path to trqauthd.
